--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.5.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
-    "mongoose": "^6.0.10"
+    "mongoose": "^6.0.10",
+    "nodemailer": "^6.7.0",
+    "nodemailer-mailgun-transport": "^2.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
