--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "John Marcos",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.5.0",
@@ -17,6 +18,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
+    "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.10",
     "nodemailer": "^6.7.0",
     "nodemailer-mailgun-transport": "^2.1.3"
