--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
+    "express-paginate": "^1.0.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "nodemailer": "^6.7.0",
-    "nodemailer-mailgun-transport": "^2.1.3"
+    "nodemailer-mailgun-transport": "^2.1.3",
+    "paginate": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
