--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "express-paginate": "^1.0.2",
-    "jsonwebtoken": "^8.5.1",
+    "joi": "^18.0.1",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.12",
     "nodemailer": "^6.7.0",
-    "nodemailer-mailgun-transport": "^2.1.3",
-    "paginate": "^0.2.0"
+    "nodemailer-mailgun-transport": "^2.1.3"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "mocha": "^9.1.4",
-    "nodemon": "^2.0.13"
+    "mocha": "^11.7.1",
+    "nodemon": "^3.1.10"
   },
   "engines": {
-    "node": "^16.4.0"
+    "node": ">=18.0.0"
   }
 }
