--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
     "express-paginate": "^1.0.2",
+    "express-rate-limit": "^8.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
