--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.5.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -22,6 +23,7 @@
     "express-handlebars": "^5.3.4",
     "express-paginate": "^1.0.2",
     "express-rate-limit": "^8.1.0",
+    "express-session": "^1.18.2",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
